[wheel]
python-tag = py3

[metadata]
name = imgproxy
version = attr: imgproxy.__version__
url = https://github.com/klen/imgproxy
description = Python support for ImgProxy
long_description = file: README.md
long_description_content_type = text/markdown
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = imgproxy,
project_urls = 
	Documentation = https://github.com/klen/imgproxy
	Source code = https://github.com/klen/imgproxy
	Issue tracker = https://github.com/klen/imgproxy
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
python_modules = imgproxy
python_requires = >= 3.7

[options.extras_require]
tests = 
	pytest
	pytest-mypy
build = 
	bump2version
	twine
	wheel

[tool:pytest]
addopts = -xsv --mypy

[pylama]
ignore = D211

[pylama:tests.py]
ignore = D

[tox:tox]
envlist = py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
